--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Personal Webpage for Sharing School Stuff</title>
+<head>
+    <title>Personal Webpage for Sharing School Stuff</title>
+</head>
 <body>
 <header>
 <h1>Personal Webpage for Sharing School Stuff</h1>
@@ -9,9 +11,7 @@
 <p>Please do not take anything from this site, unless I have explictly given
 you permission to do so.</p>
 
-<h2>THIS IS STILL CURRENTLY A TEST SITE. NOT CURRENTLY IN USE!!!</h2>
-
-<iframe src="Test_LaTeX.pdf" width="50%" height="500px"></iframe>
-    <p><a href="Test_LaTeX.tex">LaTeX Source</a></p>
+<!--<p><a href="APS111H1.html">APS111H1-->
+<!--</a></p>-->
 </body>
 </html>
