--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <p>Please do not take anything from this site, unless I have explictly given
 you permission to do so.</p>
 
-<!--<p><a href="APS111H1.html">APS111H1-->
-<!--</a></p>-->
+<p><a href="APS111H1.html">APS111H1</a></p>
 </body>
 </html>
