--- a/APS111H1.html
+++ b/APS111H1.html
@@ -9,6 +9,14 @@
 
 <p><a href="index.html">Back</a></p>
 
+<p id="demo"></p>
+
+<script>
+    const x = Math.random();
+    const y = Math.random();
+    document.getElementById("demo").innerHTML = x.toString() + y.toString();
+</script>
+
 <p><a href="Random_100.txt">Some Words</a></p>
 </body>
 </html>
