--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 you permission to do so.</p>
 
 <p><a href="APS111H1.html">APS111H1</a></p>
-<p><a href="APS111H1.html">CSC207H1</a></p>
+<p><a href="CSC207Y1.html">CSC207H1</a></p>
 </body>
 </html>
