--- a/CSC207H1.html
+++ b/CSC207H1.html
@@ -7,7 +7,8 @@
 <body>
 
 <h1>CSC207H1</h1>
-<p>This is just a test. Please do not enter anything in the form!</p>
+<p>This is just a test. Please do not enter anything in the form! It does
+    not collect information</p>
 
 <form action="welcome.php" method="post">
     Name: <label>
