Moved things around

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 you permission to do so.</p>
 
 <p><a href="Archieved\Archieved.html">Archived Stuff</a></p>
+<p><a href="Tex\LaTeX_stuff.html">LaTeX Stuff</a></p>
 </body>
 </html>
