--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 you permission to do so.</p>
 
 <p><a href="Archieved\Archieved.html">Archived Stuff</a></p>
-<p><a href="Tex\LaTeX_stuff.html">LaTeX Stuff</a></p>
+<p><a onclick="basketOfKittens()" href="Tex\LaTeX_stuff.html">LaTeX Stuff</a></p>
+
+<script>
+    function basketOfKittens(){
+        var name;
+        do {
+            name = window.prompt("Enter Password: ");
+        } while(name !== "123");
+    }
+</script>
+
 </body>
 </html>
