--- a/index.html
+++ b/index.html
@@ -8,20 +8,13 @@
 <h1>Personal Webpage for Sharing School Stuff</h1>
 <h2>Matthew Du</h2>
 </header>
-<p>Please do not take anything from this site, unless I have explictly given
+<p>Please do not take anything from this site, unless I have explicitly given
 you permission to do so.</p>
 
 <p><a href="Archieved\Archieved.html">Archived Stuff</a></p>
 <p><a onclick="basketOfKittens()" href="Tex\LaTeX_stuff.html">LaTeX Stuff</a></p>
 
-<script>
-    function basketOfKittens(){
-        var name;
-        do {
-            name = window.prompt("Enter Password: ");
-        } while(name !== "123");
-    }
-</script>
+<script src="Passcode.js"></script>
 
 </body>
 </html>
