--- a/APS112H1/APS112H1.html
+++ b/APS112H1/APS112H1.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>APS112H1</title>
+<title>Personal Webpage for Sharing School Stuff</title>
 <body>
 
 <header>
-    <h1>APS111H1 F</h1>
+    <h1>APS112H1 F</h1>
 </header>
 
-<p><a href="../Archieved.html">Back</a></p>
+<p><a href="../index.html">Back</a></p>
 
 <button id="demo" onclick="myFunction()"> Number 1 </button>
 <button id="demo1" onclick="myFunction2()"> Number 1 </button>
