--- a/Archieved/Archieved.html
+++ b/Archieved/Archieved.html
@@ -10,7 +10,8 @@
 <p>Please do not take anything from this site, unless I have explictly given
     you permission to do so.</p>
 
-<p><a href="APS111H1\APS111H1.html">APS111H1</a></p>
-<p><a href="CSC207H1\CSC207H1.html">CSC207H1</a></p>
+<p><a href="APS111H1/APS111H1.html">APS111H1</a></p>
+<p><a href="CSC207H1/CSC207H1.html">CSC207H1</a></p>
+<p><a href="../index.html">Back</a></p>
 </body>
 </html>
