--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <p>Please do not take anything from this site, unless I have explicitly given
 you permission to do so.</p>
 
-<p><a href="Archieved\Archieved.html">Archived Stuff</a></p>
-<p><a onclick="basketOfKittens()" href="Tex\LaTeX_stuff.html">LaTeX Stuff</a></p>
+<p><a href="APS112H1/APS112H1.html">APS112H1</a></p>
+<p><a href="Archieved/Archieved.html">Archived Stuff</a></p>
+<p><a onclick="basketOfKittens()" href="Tex/LaTeX_stuff.html">LaTeX Stuff</a></p>
 
 <script src="Passcode.js"></script>
 
