--- a/Archieved/CSC207H1/CSC207H1.html
+++ b/Archieved/CSC207H1/CSC207H1.html
@@ -2,13 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>CSC207H1</title>
 </head>
 <body>
 
 <h1>CSC207H1</h1>
 <p>This is just a test. Please do not enter anything in the form! It does
     not collect information</p>
+
+<button onclick="try_this()">Click Me</button>
+<p id="demo"></p>
+<script>
+    function try_this() {
+        const button = document.createElement('button');
+        button.innerHTML = 'click me';
+        button.onclick = function () {
+            alert('here be dragons');
+            return false;
+        };
+        document.getElementById('demo').appendChild(button);
+    }
+</script>
 
 <form action="welcome.php" method="post">
     Name: <label>
